add sound demo and mvn settings.

--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>cctcc.art.c1635</groupId>
-    <artifactId>ProcessingInJava</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
-    </properties>
-
-    <repositories>
-        <repository>
-            <id>clojars.org</id>
-            <url>https://repo.clojars.org</url>
-        </repository>
-    </repositories>
-    <dependencies>
-        <dependency>
-            <groupId>quil</groupId>
-            <artifactId>processing-core</artifactId>
-            <version>[3.5.3,)</version>
-        </dependency>
-    </dependencies>
-
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>cctcc.art.c1635</groupId>
+  <artifactId>ProcessingInJava</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>15</maven.compiler.source>
+    <maven.compiler.target>15</maven.compiler.target>
+    <!--<processing.lib>C:/DevWorkshop/c1635/processing_sketchbook/libraries/sound/library</processing.lib>-->
+  </properties>
+  <repositories>
+    <repository>
+      <id>clojars.org</id>
+      <url>https://repo.clojars.org/</url>
+    </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io/</url>
+    </repository>
+  </repositories>
+  <dependencies>
+    <dependency>
+      <groupId>quil</groupId>
+      <artifactId>processing-core</artifactId>
+      <version>[3.5.3,)</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.processing</groupId>
+      <artifactId>processing-sound</artifactId>
+      <version>v2.2.3</version>      
+    </dependency>
+    <dependency>
+      <groupId>com.jsyn</groupId>
+      <artifactId>jsyn</artifactId>
+      <version>20170815</version>
+    </dependency>
+    <dependency>
+      <groupId>fr.delthas</groupId>
+      <artifactId>javamp3</artifactId>
+      <version>1.0.4</version>      
+    </dependency>    
+    <!--
+    mvn install:install-file
+    file=${processing.lib}/javamp3-1.0.4.jar
+    groupId=fr.delthas
+    artifactId=javamp3
+    version=1.0.4
+    packaging=jar
+    -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>15.0.1</version>
+      <type>jar</type>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>install-file</goal>
+            </goals>
+            <id>install-file</id>
+          </execution>
+        </executions>
+        <configuration>
+          <file>${project.build.resources[0].directory}/lib/javamp3-1.0.4.jar</file>
+          <groupId>fr.delthas</groupId>
+          <artifactId>javamp3</artifactId>
+          <version>1.0.4</version>
+          <packaging>jar</packaging>
+        </configuration>            
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <id>sound</id>
+            <configuration>
+              <mainClass>mysketch.MySketchWithSound</mainClass>      
+            </configuration>
+          </execution>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <id>nosound</id>
+            <configuration>
+              <mainClass>MySketch</mainClass>      
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
